cdrkit (1.0pre3) UNRELEASED; urgency=low

  * Added FAQ ("where wodim name comes from")
  * Moved the NULL pointer check on cdr_t to a place before it is used for DVD
    feature checks (otherwise it would crash when run on any pure CD-ROM
    reader)
  * Added test for WORDS_BIGENDIAN

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 09:56:38 +0200

cdrkit (1.0pre2) RELEASED; urgency=low

  * Took zisofs_tools out of the global build system and restored its original
    Makefile. Its own build system works better.

 -- Eduard Bloch <blade@debian.org>  Sun, 03 Sep 2006 22:14:31 +0200

cdrkit (1.0pre1) RELEASED; urgency=low

  [ See http://bugs.debian.org/$BUGNR for detailed explanations ]
  * The Big Fork to an independent project called cdrkit
    + using the last clearly stated GPLed versions of files from
      cdrtools-2.01.01a08 (closes: #353403, 372486)
    + we play the upstream role now, using our patches and we like them
      (closes: #361450)
    + renamed relevant works to avoid claims of "potential defamation" or
      "damage of reputation" (closes: #350738)
    + custom CMake based build system used instead of the original one, since
      we understand it better (closes: #350739 and hopefully closes: #350254,
      reopen if not). It seems to be portable among the platforms
      supported by Debian, it needs a bit of work for porting to non-Linux
      plattforms, though.
  * removed most of the anti-linux2.6  program messages (unless being
    in verbose mode). (closes: #377145)
  * changed default config file location to /etc/default/wodim
  * added more meaningful error message on -dvd-video failure (closes: #324586)
  * minor cdda2mp3/cdda2ogg scripts fixes suggested by Fabian Pietsch, plus
    fixes for unreliable encoder detection (closes: #283794, #344443) plus
    possible override of preset CDDA_DEVICE variable fixed. Made the list of
    selected audiotracks modifiable, see manpage (closes: #344445)