@@ -5,6 +5,8 @@ cdrkit (1.0pre3) UNRELEASED; urgency=low
     feature checks (otherwise it would crash when run on any pure CD-ROM
     reader)
   * Added test for WORDS_BIGENDIAN
+  * copied values from align.h to xconfig.h (is there another redundant
+    check&define somewhere, maybe?)
 
  -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 09:56:38 +0200
 
